feat: add Header and Navbar components
- Add Header.jsx component
- Add Navbar.jsx component
- Add RobotoMono and Montserrat fonts
- Add darkMode and custom font sizes in tailwind.config.js
- Add dark mode theme feature

--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Montserrat font: -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
+
+    <!-- Roboto Mono font: -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200;300;400&display=swap" rel="stylesheet">
     <title>JC</title>
   </head>
-  <body>
+  <body className="dark" >
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
