- Add favicon image in html head and change title tag text

--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<head>
+		<meta charset="UTF-8" />
+		<link rel="icon" type="image/png" sizes="64x64" href="./src/assets/favicon.png" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!--FONTS: Montserrat, Roboto Mono, Roboto Slab  -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600&family=Roboto+Mono:wght@200;300;400&family=Roboto+Slab:wght@100;200;300;400&display=swap" rel="stylesheet">
-    <title>JC</title>
-  </head>
-  <body className="dark" >
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+		<!--FONTS: Montserrat, Roboto Mono, Roboto Slab  -->
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600&family=Roboto+Mono:wght@200;300;400&family=Roboto+Slab:wght@100;200;300;400&display=swap" rel="stylesheet" />
+		<title>JoaoCunha.com</title>
+	</head>
+	<body className="dark">
+		<div id="root"></div>
+		<script type="module" src="/src/main.jsx"></script>
+	</body>
 </html>
