--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600&family=Roboto+Mono:wght@200;300;400&family=Roboto+Slab:wght@100;200;300;400&display=swap" rel="stylesheet" />
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-M90B04BYZJ"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag("js", new Date());
+
+			gtag("config", "G-M90B04BYZJ");
+		</script>
+		<!-- ----------- -->
 		<title>JoaoCunha.com</title>
 	</head>
 	<body className="dark">
