--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<!-- ----------- -->
 		<title>JoaoCunha.com</title>
 	</head>
-	<body className="dark">
+	<body>
 		<div id="root"></div>
 		<script type="module" src="/src/main.jsx"></script>
 	</body>
